[package]
name = "neutron"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Unique IDs
uuid = { version = "0.8", features = ["serde", "v4"] }
# Serializing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.68"
flate2 = "1.0.22"
# Input
rustyline = "9.0.0"
# Config
config = { version = "0.11", features = [ "toml" ] }
directories = "4.0.1"
# Random Numbers
nanorand = "0.6.1"
handlebars = "4.1.3"


# Unused
# lazy_static = "1.4.0"
# ct-python = "0.5.3"
# svg = "0.10.0"
# derive_more = "0.99.0"
# rust-embed = "6.2.0"
# unicode-segmentation = "1.8.0"
